# alleycat

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
crates/acp-bridge/src/: acp_client.rs
crates/alleycat/: Cargo.toml
crates/alleycat/src/: agent_manifest.rs  agents.rs  config.rs  host.rs  lib.rs  main.rs  paths.rs  protocol.rs  state.rs  stream.rs
crates/alleycat/src/cli/: mod.rs  onboarding.rs  pair.rs  probe.rs  rotate.rs  status.rs  stop.rs
crates/alleycat/src/daemon/: control.rs  mod.rs
crates/alleycat/src/ipc/: windows.rs
crates/alleycat/src/service/: linux.rs  macos.rs  mod.rs  windows.rs
crates/alleycat/wix/: main.wxs
crates/amp-bridge/src/: bridge.rs
crates/bridge-conformance/src/: diff.rs  lib.rs  prereq.rs  scenario.rs  streaming.rs  transport.rs  upstream_schema.rs
crates/bridge-conformance/src/targets/: hermes.rs  mod.rs  opencode.rs
crates/bridge-conformance/tests/: conformance.rs  method_surface.rs
crates/bridge-core/: Cargo.toml
crates/bridge-core/src/: envelope.rs  launcher.rs  lib.rs  notify.rs  pool.rs  server.rs  state.rs  thread_index.rs
crates/bridge-core/tests/: launcher.rs
crates/claude-bridge/src/: bridge.rs  main.rs  state.rs
crates/claude-bridge/src/handlers/: command_exec.rs  lifecycle.rs  model.rs  thread.rs  turn.rs
crates/claude-bridge/src/index/: mod.rs
crates/claude-bridge/src/pool/: mod.rs  process.rs
crates/claude-bridge/src/translate/: events.rs  items.rs
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/codex-proto/src/: common.rs  notifications.rs  thread.rs
crates/hermes-bridge/: Cargo.toml
crates/hermes-bridge/src/: api_client.rs  bridge.rs  index.rs  main.rs  sse.rs
crates/opencode-bridge/: Cargo.toml
crates/opencode-bridge/src/: approval.rs  lib.rs  main.rs  opencode_proc.rs  pty.rs  state.rs
crates/opencode-bridge/src/handlers/: mod.rs
crates/opencode-bridge/src/opencode_client/: mod.rs
crates/opencode-bridge/src/sse/: mod.rs
crates/opencode-bridge/src/translate/: events.rs  input.rs  parts.rs  tool.rs
crates/opencode-bridge/tests/: fake_opencode_smoke.rs  v2_cross_cwd.rs  v3_message_lifecycle.rs  v3_resume.rs  v4_approval.rs  v4_delta_routing.rs  v5_compaction.rs  v5_session_lifecycle.rs  v6_question.rs  v7_tool_call_surfacing.rs  v8_stream_lifecycle.rs  v9_token_usage.rs
crates/opencode-bridge/tests/support/: mod.rs
crates/pi-bridge/: Cargo.toml
crates/pi-bridge/src/: approval.rs  lib.rs  main.rs  server.rs  state.rs
crates/pi-bridge/src/codex_proto/: common.rs  items.rs  model.rs  notifications.rs  thread.rs
crates/pi-bridge/src/handlers/: command_exec.rs  lifecycle.rs  model.rs  skills.rs  thread.rs  turn.rs
crates/pi-bridge/src/index/: mod.rs  pi_session_scan.rs  testing.rs
crates/pi-bridge/src/pool/: mod.rs  pi_protocol.rs  process.rs
crates/pi-bridge/src/translate/: events.rs  items.rs  tool_call.rs
crates/pi-bridge/tests/: codex_proto_wire.rs  listen_mode_concurrent.rs  v1_codex_smoke.rs  v3_resume.rs  v4_approval.rs  v6_thread_list_filter.rs
crates/pi-bridge/tests/support/: thread_index_stub.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: frame.rs  lib.rs  message.rs  ready.rs
crates/relay/: Cargo.toml
crates/relay/src/: config.rs  host_detect.rs  lib.rs  main.rs  pair.rs  paths.rs  state.rs  test_support.rs
crates/relay/src/cli/: allow.rs  logs.rs  mod.rs  qr.rs  rotate.rs  status.rs  stop.rs
crates/relay/src/daemon/: control.rs  logging.rs  mod.rs
crates/relay/src/ipc/: mod.rs  unix.rs  windows.rs
crates/relay/src/service/: linux.rs  macos.rs  mod.rs  windows.rs
crates/relay/tests/: legacy_pair_qr.rs  legacy_ready_file.rs
