[workspace]
members = [
    "crates/protocol",
    "crates/client",
    "crates/relay",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "GPL-3.0-only"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
hex = "0.4"
pin-project-lite = "0.2"
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rand = "0.8"
rcgen = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
