[package]
name = "alleycat-bridge-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "alleycat_bridge_core"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
