[package]
name = "alleycat-opencode-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "alleycat-opencode-bridge"
path = "src/main.rs"

[lib]
name = "alleycat_opencode_bridge"
path = "src/lib.rs"

[dependencies]
alleycat-bridge-core = { path = "../bridge-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
