[package]
name = "alleycat-pi-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "alleycat-pi-bridge"
path = "src/main.rs"

# Test-only stand-in for `pi-coding-agent --mode rpc`. Reads RpcCommand JSON
# lines on stdin, emits responses + scripted events on stdout. Used by the
# verification matrix to drive `PiPool` without depending on a real pi build.
[[bin]]
name = "fake-pi"
path = "tests/support/fake_pi.rs"

[lib]
name = "alleycat_pi_bridge"
path = "src/lib.rs"

[dependencies]
alleycat-bridge-core = { path = "../bridge-core" }
anyhow = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["io-std"] }
tokio-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
directories = { workspace = true }

[features]
# Exposes `crate::index::testing` (and any future `crate::*::testing` modules)
# so downstream test crates can build against the helper types without going
# through `#[cfg(test)]`-only items. Always on under `cargo test`.
test-helpers = []

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
