[package]
name = "alleycat"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
alleycat-protocol = { path = "../protocol" }
anyhow.workspace = true
arc-swap.workspace = true
clap.workspace = true
directories.workspace = true
fd-lock.workspace = true
futures.workspace = true
hex.workspace = true
hostname.workspace = true
local-ip-address = "0.6"
pin-project-lite.workspace = true
qrcodegen = "1"
quinn.workspace = true
rand.workspace = true
rcgen.workspace = true
rustls.workspace = true
rustls-pemfile.workspace = true
serde = { workspace = true }
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
which.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
mslnk = "0.1"
windows-sys = { version = "0.59", features = ["Win32_Security", "Win32_Storage_FileSystem", "Win32_System_Threading", "Win32_System_Pipes"] }
